--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/ProyectoGimnasio2.0
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jcalendar-1.4.jar
 file.reference.postgresql-42.2.5.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\postgresql-42.2.5.jar
+file.reference.postgresql-42.5.0.jar=C:\\Users\\Asus\\Downloads\\postgresql-42.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.postgresql-42.2.5.jar}
+    ${file.reference.postgresql-42.2.5.jar}:\
+    ${file.reference.postgresql-42.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=19
-javac.target=19
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
