empleado en proceso

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,14 +34,18 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoGimnasio2.0
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\jsari\\Downloads\\jcalendar-1.4.jar
 file.reference.postgresql-42.2.5.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\postgresql-42.2.5.jar
 file.reference.postgresql-42.5.0.jar=C:\\Users\\Asus\\Downloads\\postgresql-42.5.0.jar
+file.reference.postgresql-42.5.1.jar=C:\\Users\\jsari\\Downloads\\postgresql-42.5.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.postgresql-42.2.5.jar}:\
-    ${file.reference.postgresql-42.5.0.jar}
+    ${file.reference.postgresql-42.5.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.postgresql-42.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
