--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoGimnasio2.0
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\miche\\Documents\\TERCER CICLO\\Base Datos\\lib\\lib\\jcalendar-1.4.jar
 file.reference.postgresql-42.2.5.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\postgresql-42.2.5.jar
 file.reference.postgresql-42.5.0.jar=C:\\Users\\Asus\\Downloads\\postgresql-42.5.0.jar
 includes=**
@@ -41,7 +42,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.postgresql-42.2.5.jar}:\
-    ${file.reference.postgresql-42.5.0.jar}
+    ${file.reference.postgresql-42.5.0.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
