--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,18 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoGimnasio2.0
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\miche\\Documents\\TERCER CICLO\\Base Datos\\lib\\lib\\jcalendar-1.4.jar
-file.reference.postgresql-42.2.5.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\postgresql-42.2.5.jar
-file.reference.postgresql-42.5.0.jar=C:\\Users\\Asus\\Downloads\\postgresql-42.5.0.jar
+file.reference.jaxws-api-2.3.1.jar=C:\\Users\\Usuario\\Documents\\Lib\\jaxws-api-2.3.1.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Documents\\Lib\\jcalendar-1.4.jar
+file.reference.postgresql-42.5.0.jar=C:\\Users\\Usuario\\Documents\\Lib\\postgresql-42.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.postgresql-42.2.5.jar}:\
-    ${file.reference.postgresql-42.5.0.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.postgresql-42.5.0.jar}:\
+    ${file.reference.jaxws-api-2.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,7 +78,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoGimnasio2.0
-main.class=
+main.class=com.mycompany.proyecto_gimnasio.Proyecto_Gimnasio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
