CREACION DE vista registro persona

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,15 +34,23 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoGimnasio2.0
 excludes=
 file.reference.jaxws-api-2.3.1.jar=C:\\Users\\Usuario\\Documents\\Lib\\jaxws-api-2.3.1.jar
+file.reference.jaxws-api-2.3.1.jar-1=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jaxws-api-2.3.1.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Documents\\Lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jcalendar-1.4.jar
+file.reference.postgresql-42.2.5.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\postgresql-42.2.5.jar
 file.reference.postgresql-42.5.0.jar=C:\\Users\\Usuario\\Documents\\Lib\\postgresql-42.5.0.jar
+file.reference.rspnet-Librerias=C:\\Users\\frank\\Documents\\rspnet\\Librerias
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.postgresql-42.5.0.jar}:\
-    ${file.reference.jaxws-api-2.3.1.jar}
+    ${file.reference.jaxws-api-2.3.1.jar}:\
+    ${file.reference.rspnet-Librerias}:\
+    ${file.reference.jaxws-api-2.3.1.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.postgresql-42.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
