--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoGimnasio2.0
+application.vendor=miche
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,25 +33,19 @@ dist.jar=${dist.dir}/ProyectoGimnasio2.0.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoGimnasio2.0
+endorsed.classpath=
 excludes=
-file.reference.jaxws-api-2.3.1.jar=C:\\Users\\Usuario\\Documents\\Lib\\jaxws-api-2.3.1.jar
 file.reference.jaxws-api-2.3.1.jar-1=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jaxws-api-2.3.1.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Documents\\Lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jcalendar-1.4.jar
 file.reference.postgresql-42.2.5.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\postgresql-42.2.5.jar
 file.reference.postgresql-42.5.0.jar=C:\\Users\\Usuario\\Documents\\Lib\\postgresql-42.5.0.jar
-file.reference.rspnet-Librerias=C:\\Users\\frank\\Documents\\rspnet\\Librerias
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.postgresql-42.5.0.jar}:\
-    ${file.reference.jaxws-api-2.3.1.jar}:\
-    ${file.reference.rspnet-Librerias}:\
     ${file.reference.jaxws-api-2.3.1.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.postgresql-42.2.5.jar}
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
