--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,8 +38,9 @@ excludes=
 file.reference.jaxws-api-2.3.1.jar-1=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jaxws-api-2.3.1.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Asus\\Downloads\\Librerias\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\jcalendar-1.4.jar
-file.reference.postgresql-42.2.5.jar=C:\\Users\\frank\\Documents\\rspnet\\Librerias\\postgresql-42.2.5.jar
+file.reference.postgresql-42.2.5.jar=C:\\Users\\Asus\\Downloads\\Librerias\\postgresql-42.2.5.jar
 file.reference.postgresql-42.5.0.jar=C:\\Users\\Usuario\\Documents\\Lib\\postgresql-42.5.0.jar
+file.reference.postgresql-42.5.0__1_.jar=C:\\Users\\Asus\\Downloads\\Librerias\\postgresql-42.5.0 (1).jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +48,9 @@ javac.classpath=\
     ${file.reference.postgresql-42.5.0.jar}:\
     ${file.reference.jaxws-api-2.3.1.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.postgresql-42.2.5.jar}:\
+    ${file.reference.postgresql-42.5.0__1_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
